fix クエリ文字列をidからpark_idへ
